Disable autonumeric. Use CharField and TextInput instead of DecimalField.

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
         {% block page-js %}
         <script src="https://unpkg.com/autonumeric"></script>
         <script>
-            AutoNumeric.multiple(['#id_source_amount', '#id_dest_amount']);
+            // AutoNumeric.multiple(['#id_source_amount', '#id_dest_amount']);
 
             const SOURCE_CURRENCY_RATE_SYMBOL_MAP = {
                 'NGN': [{{ rates.ngn_to_ghs }}, 'GH₵'],
