--- a/templates/inc/capsules/_index.html
+++ b/templates/inc/capsules/_index.html
@@ -12,7 +12,9 @@
     <div class="section full mt-2 mb-2">
         <div class="wide-block pt-2 pb-2">
 
-            <form class="disable-btn-on-submit">
+            <form class="disable-btn-on-submit" method="post">
+                {% csrf_token %}
+                {{ form.non_field_errors }}
                 <div class="form-group boxed">
                     <div class="input-wrapper">
                         <label class="label" for="amount">You send</label>
