--- a/templates/inc/capsules/_signin.html
+++ b/templates/inc/capsules/_signin.html
@@ -7,7 +7,7 @@
             <div class="section-title">
                 <h1>Welcome back</h1>
             </div>
-            <form method="post" class="needs-validation">
+            <form method="post" class="disable-btn-on-submit">
                 {% csrf_token %}
                 {{ form.non_field_errors }}
                 <div class="form-group boxed">
