--- a/templates/inc/capsules/_signup.html
+++ b/templates/inc/capsules/_signup.html
@@ -7,7 +7,7 @@
             <div class="section-title">
                 <h1>Create Account</h1>
             </div>
-            <form class="needs-validation" method="post">
+            <form class="disable-btn-on-submit" method="post">
                 {% csrf_token %}
                 {{ form.non_field_errors }}
                 <div class="form-group boxed">
