--- a/templates/inc/capsules/_signup.html
+++ b/templates/inc/capsules/_signup.html
@@ -1,5 +1,3 @@
-{% load static %}
-
 <!-- App Capsule -->
 <div id="appCapsule" class="mt-5">
     <div class="login-form">
@@ -67,9 +65,9 @@
 
                 <div class="form-links mt-2">
                     <div>
-                        <span>Already have an account?</span> <a href="page-register.html">Log in</a>
+                        <span>Already have an account?</span> <a href="{% url 'customer:sign-in' %}{% if next %}?next={{ next }}{% endif %}">Log in</a>
                     </div>
-                    <div><a href="page-forgot-password.html" class="text-muted">Forgot Password?</a></div>
+                    <div><a href="#" class="text-muted">Forgot Password?</a></div>
                 </div>
 
                 <div class="form-button-group">
