--- a/templates/transaction/add-account.html
+++ b/templates/transaction/add-account.html
@@ -5,7 +5,7 @@
 {% block app-header %}
 <div class="appHeader bg-primary text-light">
     <div class="left"></div>
-    <div class="pageTitle">Add Receiving Account</div>
+    <div class="pageTitle">Add Receiving Account {{ site }}</div>
     <div class="right"></div>
 </div>
 {% endblock %}
@@ -13,3 +13,5 @@
 {% block app-capsule %}
 {% include 'inc/capsules/_add-account.html' %}
 {% endblock %}
+
+{% block page-js %}{% endblock %}
