--- a/templates/transaction/confirm.html
+++ b/templates/transaction/confirm.html
@@ -1,25 +1,18 @@
 {% extends 'index.html' %}
 
-{% load static %}
-
-{% block page-title %}Add Account{% endblock %}
+{% block page-title %}Confirm Transaction{% endblock %}
 
 {% block app-header %}
 <div class="appHeader bg-primary text-light">
+    <div class="left"></div>
     <div class="left">
         <a href="javascript:;" class="headerButton goBack">
             <ion-icon name="chevron-back-outline"></ion-icon>
         </a>
     </div>
-    <div class="pageTitle">Add Receiving Account</div>
+    <div class="pageTitle">Confirm Transaction</div>
     <div class="right"></div>
 </div>
 {% endblock %}
 
-{% block app-capsule %}
-{% include 'inc/capsules/_add-account.html' %}
-{% endblock %}
-
-{% block page-js %}
-<script src="{% static 'assets/js/add-account.js' %}"></script>
-{% endblock %}
+{% block app-capsule %}{% endblock %}
