Add no accounts message.

--- a/templates/inc/capsules/_add-account.html
+++ b/templates/inc/capsules/_add-account.html
@@ -67,9 +67,7 @@
                             </li>
                         {% endfor %}
                     {% else %}
-                        <p id="no-accounts" class="mb-0">
-                            You have no saved accounts.
-                        </p>
+                        <li id="no-accounts"><a href="#">You have no saved accounts.</a></li>
                     {% endif %}
                     <!-- <li>
                         <a href="#">
