--- a/templates/inc/capsules/_add-account.html
+++ b/templates/inc/capsules/_add-account.html
@@ -51,6 +51,18 @@
 
                 <div class="form-group boxed">
                     <div class="input-wrapper">
+                        <label class="label" for="account_number">{{ form.provider_code.label }}</label>
+                        {{ form.provider_code }}
+                        {{ form.provider_name }}
+                        <i class="clear-input">
+                            <ion-icon name="close-circle"></ion-icon>
+                        </i>
+                        <div>{{ form.provider_code.errors }}</div>
+                    </div>
+                </div>
+
+                <div class="form-group boxed">
+                    <div class="input-wrapper">
                         <label class="label" for="account_number">{{ form.number.label }}</label>
                         {{ form.number }}
                         <i class="clear-input">
@@ -85,6 +97,8 @@
                     </div>
                 {% endif %}
 
+                <input type="hidden" id="id_url" name="url" value="{{ beneficiary_url }}">
+                <input type="hidden" id="id_secret_key" name="secret_key" value="{{ secret_key }}">
                 <div class="mt-2">
                     <button class="btn btn-primary btn-block" type="submit">Next</button>
                     <!-- <button type="button" class="btn btn-primary btn-block btn-lg" data-toggle="modal" data-target="#ModalForm">
