--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -6,3 +6,9 @@
     margin: 0;
     font-size: 80%;
 }
+
+#accounts-list {
+    max-height: 200px;
+    border-right: solid 1px #E1E1E1;
+    border-left: solid 1px #E1E1E1;
+}
