--- a/templates/transaction/confirm.html
+++ b/templates/transaction/confirm.html
@@ -1,5 +1,7 @@
 {% extends 'index.html' %}
 
+{% load humanize %}
+
 {% block page-title %}Confirm Transaction{% endblock %}
 
 {% block app-header %}
@@ -17,20 +19,32 @@
 {% block app-capsule %}
 <div id="appCapsule">
     <div class="wide-block pt-2 pb-2" style="border-bottom-width: 0;">
+        {% with t=transaction %}
         <ul class="listview simple-listview mt-5">
             <li>
                 <span class="text-muted">You are sending</span>
-                <strong>GH₵510</strong>
+                <strong>
+                    {% if t.inflow.currency == 'NGN' %}₦{% else %}GH₵{% endif %}{{ t.inflow.amount | intcomma }}
+                </strong>
             </li>
             <li>
                 <span class="text-muted">To</span>
-                <strong style="text-align: right">GTBank<br/>0009432630<br/>Oladayo Joshua Osikoya<br/></strong>
+                <strong style="text-align: right">
+                    {{ t.outflow.dest_account_provider_name }}<br/>
+                    {{ t.outflow.dest_account_number }}<br/>
+                    {% if t.outflow.currency == 'NGN' %}
+                        {{ t.outflow.dest_account_name }}
+                    {% endif %}
+                </strong>
             </li>
             <li>
                 <span class="text-muted">Recipient will receive</span>
-                <strong>₦39,844</strong>
+                <strong>
+                    {% if t.outflow.currency == 'NGN' %}₦{% else %}GH₵{% endif %}{{ t.outflow.amount | intcomma }}
+                </strong>
             </li>
         </ul>
+        {% endwith %}
         <div class="form-button-group" style="margin-bottom: 55px;">
             <button type="submit" class="btn btn-primary btn-block btn-lg">Send Money</button>
         </div>
