--- a/templates/inc/bottom-menu.html
+++ b/templates/inc/bottom-menu.html
@@ -2,6 +2,12 @@
 <div class="appBottomMenu">
     <a href="index.html" class="item">
         <div class="col">
+            <ion-icon name="home-outline"></ion-icon>
+            <strong>Home</strong>
+        </div>
+    </a>
+    <a href="index.html" class="item">
+        <div class="col">
             <ion-icon name="settings-outline"></ion-icon>
             <strong>Settings</strong>
         </div>
