--- a/templates/inc/bottom-menu.html
+++ b/templates/inc/bottom-menu.html
@@ -6,16 +6,16 @@
             <strong>Home</strong>
         </div>
     </a>
+    <a href="app-components.html" class="item">
+        <div class="col">
+            <ion-icon name="layers-outline"></ion-icon>
+            <strong>Activity</strong>
+        </div>
+    </a>
     <a href="index.html" class="item">
         <div class="col">
             <ion-icon name="settings-outline"></ion-icon>
             <strong>Settings</strong>
-        </div>
-    </a>
-    <a href="app-components.html" class="item">
-        <div class="col">
-            <ion-icon name="layers-outline"></ion-icon>
-            <strong>History</strong>
         </div>
     </a>
     <a href="{% url 'customer:sign-out' %}" class="item">
