--- a/templates/inc/bottom-menu.html
+++ b/templates/inc/bottom-menu.html
@@ -1,6 +1,6 @@
 <!-- App Bottom Menu -->
 <div class="appBottomMenu">
-    <a href="index.html" class="item">
+    <a href="{% url 'customer:index' %}" class="item">
         <div class="col">
             <ion-icon name="home-outline"></ion-icon>
             <strong>Home</strong>
