--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -9,6 +9,12 @@
 
 #accounts-list {
     max-height: 200px;
-    border-right: solid 1px #E1E1E1;
-    border-left: solid 1px #E1E1E1;
+    /* border-right: solid 1px #E1E1E1;
+    border-left: solid 1px #E1E1E1; */
+    border-top-width: 0;
+    border-bottom-width: 0;
+}
+
+#accounts-list .active {
+    color: white !important;
 }
