--- a/templates/inc/capsules/_index.html
+++ b/templates/inc/capsules/_index.html
@@ -20,9 +20,6 @@
                         <label class="label" for="amount">You send</label>
                         {{ form.source_amount }}
                         {{ form.source_amount.errors }}
-                        <!-- <i class="clear-input">
-                            <ion-icon name="close-circle"></ion-icon>
-                        </i> -->
                     </div>
                 </div>
 
@@ -33,21 +30,13 @@
                     </div>
                 </div>
 
-                <div class="btn-group mt-1 mb-1" role="group" aria-label="First group">
-                    <button type="button" class="btn btn-secondary">
-                        <ion-icon name="close-outline"></ion-icon> <span id="rate"></span>
-                    </button>
-                </div>
-
                 <div class="form-group boxed">
                     <div class="input-wrapper">
                         <label class="label" for="currency">Recipient gets</label>
                         {{ form.dest_amount }}
                         {{ form.dest_amount.errors }}
-                        <!-- <i class="clear-input">
-                            <ion-icon name="close-circle"></ion-icon>
-                        </i> -->
                     </div>
+                    <div><small>Rate is <span id="rate"></span></small></div>
                 </div>
 
                 <div class="form-group boxed">
