--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="theme-color" content="#000000">
-        <title>Cash Pipe - {% block page-title %}Send Money{% endblock %}</title>
-        <meta name="description" content="Mobilekit HTML Mobile UI Kit">
+        <title>Transfr - {% block page-title %}Send Money{% endblock %}</title>
+        <meta name="description" content="Send money instantly to anyone in Ghana and Nigeria at the best rates!">
         <meta name="keywords" content="bootstrap 4, mobile template, cordova, phonegap, mobile, html" />
         <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}" sizes="32x32">
         <link rel="apple-touch-icon" sizes="180x180" href="{% static 'assets/img/icon/192x192.png' %}">
