--- a/templates/inc/bottom-menu.html
+++ b/templates/inc/bottom-menu.html
@@ -6,7 +6,7 @@
             <strong>Home</strong>
         </div>
     </a>
-    <a href="app-components.html" class="item">
+    <a href="{% url 'customer:activity' %}" class="item">
         <div class="col">
             <ion-icon name="layers-outline"></ion-icon>
             <strong>Activity</strong>
