Display right currency symbol.

--- a/templates/transaction/confirm.html
+++ b/templates/transaction/confirm.html
@@ -29,7 +29,7 @@
                             ₦{{ i.amount | intcomma }}
                         {% else %}
                             {% if i.currency == 'BTC' %}
-                                BTC{{ amount }}
+                                ₿{{ amount }}
                             {% else %}
                                 GH₵{{ i.amount | intcomma }}
                             {% endif %}
