--- a/templates/inc/bottom-menu.html
+++ b/templates/inc/bottom-menu.html
@@ -12,7 +12,7 @@
             <strong>Activity</strong>
         </div>
     </a>
-    <a href="index.html" class="item">
+    <a href="#" class="item">
         <div class="col">
             <ion-icon name="settings-outline"></ion-icon>
             <strong>Settings</strong>
